tests/error/undef_parent.gw
// [contains] unknown type in
class C extends Undefined {}
